--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 </nav>
     <!-- Navbar End -->
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5"style="background-image: url('img/Contact-US.jpg') center center no-repeat, background-size: cover;">
+    <div class="container-fluid contact-header py-5">
         <div class="container py-5">
             <h1 class="display-3 text-white mb-3 animated slideInDown" href="#">Contact</h1>
             <nav aria-label="breadcrumb animated slideInDown">
